syntax="proto3";
package auth_grpc;

service AuthHandler {
    rpc CreateUser(User) returns (User);
    rpc VerifyUser(UserRequest) returns (UserID);
}

message UserRequest {
    string email=1;
    string password=2;
}

message HttpError {
    int32 HttpCode=1;
    string LogError=2;
    string ClientError=3;
}


message UserID {
    int64 ID=1;
    HttpError err=2;
}

message User {
    int64 ID=1;
    string FirstName=2;
    string SecondName=3;
    string UserName=4;
    string Email=5;
    string Password=6;
    string EncryptPassword=7;
    string UserType=8;
    int64 FreelancerId=9;
    int64 HireManagerId=10;
    int64 CompanyId=11;
    bytes Avatar=12;
    HttpError Err=13;
}
